--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,6 +23,12 @@
     <style>
       :root{
         --contentbg: rgba(230, 230, 230, 0.9);
+        --headerColor: #2b6777;
+        --buttonColor: #52ab98;
+        --buttonHoverColor: #3d8d80;
+        --buttonShadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        --contentShadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        --inputFocusColor: #52ab98;
       }
       body, html {
         height: 100vh;  /* Ensures full viewport height */
@@ -46,11 +52,11 @@
         margin: 30px auto;
         border-radius: 15px;
         max-width: 1000px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        box-shadow: var(--contentShadow);
       }
       h2 {
         font-size: 32px;
-        color: black;
+        color: var(--headerColor);
         margin-bottom: 20px;
       }
       p {
@@ -71,7 +77,7 @@
       }
 
       .custom-input:focus {
-          border-color: #52ab98;
+          border-color: var(--inputFocusColor);
           outline: none;
       }
 
@@ -86,28 +92,27 @@
       }
 
       .custom-textarea:focus {
-          border-color: #52ab98;
+          border-color: var(--inputFocusColor);
           outline: none;
       }
 
-      /* Add some specific margin or padding to the form itself */
       .contact-form {
           margin-top: 20px;
       }
 
       .submit-btn {
-        background-color: #52ab98;
+        background-color: var(--buttonColor);
         color: white;
         padding: 12px 30px;
         font-size: 18px;
         border: none;
         border-radius: 30px;
         text-transform: uppercase;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: var(--buttonShadow);
         transition: background-color 0.3s, transform 0.3s;
       }
       .submit-btn:hover {
-        background-color: #3d8d80;
+        background-color: var(--buttonHoverColor);
         transform: scale(1.05);
       }
 
