--- a/templates/explore_more.html
+++ b/templates/explore_more.html
@@ -78,6 +78,11 @@
     <style>
       :root{
         --contentbg: rgba(230, 230, 230, 0.9);
+        --contentShadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        --headerColor: #2b6777;
+        --contentColor: #4e4e4e;
+        --buttonColor: #52ab98;
+        --buttonHoverColor: #3d8d80;
       }
         html, body {
             height: 100%;
@@ -85,7 +90,7 @@
             display: flex;
             flex-direction: column;
             font-family: 'Arial', sans-serif;
-            background-image: url("{% static 'assets/profile.jpg' %}");
+            background-image: url("{% static 'assets/newbg.jpg' %}");
         }
         .content {
           flex: 1;
@@ -94,23 +99,23 @@
           margin: 30px auto;
           border-radius: 15px;
           max-width: 1000px;
-          box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: var(--contentShadow);
       }
 
       h3 {
         font-size: 32px;
-        color: #2b6777;
+        color: var(--headerColor);
         margin-bottom: 20px;
       }
       p {
         font-size: 18px;
         line-height: 1.6;
         margin-bottom: 15px;
-        color: #4e4e4e;
+        color: var(--contentColor);
       }
 
       .explore-btn {
-        background-color: #52ab98;
+        background-color: var(--buttonColor);
         color: white;
         padding: 12px 30px;
         font-size: 18px;
@@ -121,7 +126,7 @@
         transition: background-color 0.3s, transform 0.3s;
       }
       .explore-btn:hover {
-        background-color: #3d8d80;
+        background-color: var(--buttonHoverColor);
         transform: scale(1.05);
       }
 
