--- a/templates/heart_disease_help.html
+++ b/templates/heart_disease_help.html
@@ -111,6 +111,14 @@
     <style>
         :root{
             --containerbg: rgba(230, 230, 230, 0.9);
+            --headerColor: #2b6777;  
+            --buttonColor: #28a745;
+            --buttonHoverColor: #218838;
+            --buttonShadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            --containerShadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            --attribItemColor: #f8f9fa;
+            --attribItemHeaderColor: #141414;
+            --attribItemContentColor: #495057;
           }
         body, html {
             height: 100%;
@@ -135,25 +143,25 @@
             background: var(--containerbg);
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: var(--containerShadow);
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: var(--headerColor);
         }
         .attribute-item {
             margin-bottom: 20px;
             padding: 10px;
-            background: #f8f9fa;
+            background: var(--attribItemColor);
             border-radius: 5px;
         }
         .attribute-item h3 {
             margin-bottom: 5px;
-            color: #141414;
+            color: var(--attribItemHeaderColor);
         }
         .attribute-item p {
             margin: 0 0 10px;
-            color: #495057;
+            color: var(--attribItemContentColor);
         }
         ul {
             margin: 0;
@@ -161,13 +169,13 @@
         }
         .btn {
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: var(--buttonColor);
             color: white;
             text-decoration: none;
             border-radius: 5px;
         }
         .btn:hover {
-            background-color: #0056b3;
+            background-color: var(--buttonHoverColor);
         }
     </style>
 {% endblock %}
