--- a/templates/heart_disease_predict.html
+++ b/templates/heart_disease_predict.html
@@ -142,6 +142,15 @@
 
 {% block extra_css %}
     <style>
+        :root{
+            --containerbg: rgba(230, 230, 230, 0.9);
+            --containerShadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+            --buttonColor: #28a745;
+            --buttonHoverColor: #218838;
+            --helpLinkColor: #007bff;
+            --helpLinkHoverColor: #0056b3;
+            --resultbg: #e9ecef;
+        }
         body, html {
             height: 100%;
             margin: 0;
@@ -162,10 +171,10 @@
         }
         .container {
             max-width: 700px;
-            background: rgb(231, 235, 220);
+            background: var(--containerbg);
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: var(--containerShadow);
         }
         h1 {
             text-align: center;
@@ -185,27 +194,27 @@
         }
         .btn-success {
             padding: 10px 20px;
-            background-color: #28a745;
+            background-color: var(--buttonColor);
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         .btn-success:hover {
-            background-color: #218838;
+            background-color: var(--buttonHoverColor);
         }
         .help-link {
             text-decoration: none;
-            color: #007bff;
+            color: var(--helpLinkColor);
         }
         .help-link:hover {
             text-decoration: underline;
-            color: #0056b3;
+            color: var(--helpLinkHoverColor);
         }
         .results {
             margin-top: 20px;
             padding: 15px;
-            background: #e9ecef;
+            background: var(--resultbg);
             border-radius: 5px;
         }
     </style>
