--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,11 +10,16 @@
 
     <style>
         :root{
+            --formBgColor:rgba(255,255,255,0.1);
+            --formBorder: 2px solid rgba(255,255,255,0.1);
+            --formShadow: 0 0 40px rgba(8,7,16,0.6);
             --labelTextColor:rgb(31,38,40);
             --placeholderColor:rgb(135,135,135);
             --inputFieldbgColor:rgba(141,141,141, 0.1);
             --buttonColor:rgb(229,229,229);
             --inputColor:rgb(48, 88, 99);
+            --messageSuccess: rgba(0, 128, 0, 0.8);
+            --messageError: rgba(255, 0, 0, 0.8);
         }
         * {
             padding: 0;
@@ -36,11 +41,11 @@
         }
         form {
             width: 600px; 
-            background-color: rgba(255, 255, 255, 0.13);
+            background-color: var(--formBgColor);
             border-radius: 15px;
             backdrop-filter: blur(10px);
-            border: 2px solid rgba(255, 255, 255, 0.1);
-            box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+            border: var(--formBorder);
+            box-shadow: var(--formShadow);
             padding: 40px 35px; 
         }
         form * { 
@@ -104,11 +109,11 @@
             border-radius: 5px;
         }
         .message.success {
-            background-color: rgba(0, 128, 0, 0.8);
+            background-color: var(--messageSuccess);
             color: #fff;
         }
         .message.error {
-            background-color: rgba(255, 0, 0, 0.8);
+            background-color: var(--messageError);
             color: #fff;
         }
     </style>
