--- a/templates/success.html
+++ b/templates/success.html
@@ -6,6 +6,14 @@
     <title>Success - MedifAI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
+      :root{
+        --containerShadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+        --headerColor: #2b6777;
+        --contentColor: #4e4e4e;
+        --buttonColor: #52ab98;
+        --buttonShadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        --buttonHoverColor: #3d8d80;
+       }
       body, html {
         height: 100%;
         margin: 0;
@@ -21,32 +29,34 @@
         background: white;
         padding: 40px 20px;
         border-radius: 15px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        box-shadow: var(--containerShadow);
       }
+      
       h1 {
         font-size: 36px;
-        color: #2b6777;
+        color:var(--headerColor);
         margin-bottom: 20px;
       }
       p {
         font-size: 18px;
         margin-bottom: 30px;
-        color: #4e4e4e;
+        color: var(--contentColor);
       }
       .home-btn {
-        background-color: #52ab98;
+        background-color: var(--buttonColor);
         color: white;
         padding: 12px 30px;
         font-size: 18px;
         border: none;
         border-radius: 30px;
         text-transform: uppercase;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: var(--buttonShadow);
         transition: background-color 0.3s, transform 0.3s;
         text-decoration: none;
       }
+      
       .home-btn:hover {
-        background-color: #3d8d80;
+        background-color: var(--buttonHoverColor);
         transform: scale(1.05);
       }
     </style>
