--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -2,28 +2,32 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thank You</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
-        body, html {
+      body,
+      html {
         height: 100%;
         margin: 0;
-        font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/profile.jpg' %}");
+        font-family: "Arial", sans-serif;
+        background-image: url("{% static 'assets/newbg.jpg' %}");
         /* background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
         color: #333; */
-        display: flex;               
-        flex-direction: column;  
+        display: flex;
+        flex-direction: column;
       }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container text-center my-5">
-        <h2>Thank you for contacting us!</h2>
-        <p>We have received your message, and we will get back to you soon.</p>
+      <h2>Thank you for contacting us!</h2>
+      <p>We have received your message, and we will get back to you soon.</p>
     </div>
-</body>
+  </body>
 </html>
